progress - added network service